@@ -125,7 +125,7 @@ Het formaat moet zijn: weergave naam;e-mail adres. Er mag geen kopregel zijn.',
   'group_tools:group:invitations:request' => 'Uitstaande lidmaatschap verzoeken',
   'group_tools:group:invitations:request:revoke:confirm' => 'Weet je zeker dat je dit lidmaatschap verzoek wilt terugtrekken?',
   'group_tools:group:invitations:request:non_found' => 'Er zijn geen uitstaande lidmaatschap verzoeken op dit moment',
-  'group_tools:groups:sorting:alfabetical' => 'Alfabetisch',
+  'group_tools:groups:sorting:alphabetical' => 'Alfabetisch',
   'group_tools:action:error:input' => 'Ongeldige invoer om deze actie uit te voeren',
   'group_tools:action:error:entities' => 'De opgegeven GUIDs resulteren niet in de correctie entities',
   'group_tools:action:error:entity' => 'De opgegeven GUID resulteert niet in de juiste entity',
